--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: colabu
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -32,8 +32,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.6.2
   firebase_core: ^3.15.1
+  firebase_storage: ^12.4.10
   flutter:
     sdk: flutter
+  image_picker: ^1.1.2
+  permission_handler: ^12.0.1
   provider: ^6.1.5
 
 dev_dependencies:
@@ -45,7 +48,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
